# Quant

./: .gitignore  COMPLETION_AUDIT.md  DATA_SOURCES.md  ITERATION_LOG.md  README.md  RESEARCH_METHOD.md  pyproject.toml
daily_reports/: README.md
data/: fund_universe_template.csv  market_manifest.csv
quant_fund_advisor/: __init__.py  action_report.py  backtest.py  cli.py  close_outlook.py  config.py  correlation.py  daily_report.py  daily_strategy.py  data.py  demo.py  execution_policy.py  expanded_research.py  experiment.py  external_factors.py  forward_test.py  fund_backtest.py  fund_metadata.py  goal_research.py  indicators.py  intraday_estimate.py  meta_strategy.py  model.py  model_zoo.py  multifactor.py  nav_validation.py  news.py  overfitting.py  portfolio_backtest.py  premarket_report.py  public_correlation.py  report.py  run_research.py  sector_rotation.py  selector.py  sliding_windows.py  strategy_curves.py  stress.py  style_timing.py  validation.py
spreadsheet_build/: build_backtest_workbook.mjs
tests/: test_core.py  test_fund_execution_rules.py
tools/: audit_core_satellite_generalization.py  backtest_ml_relative_entries_1to8m.py  backtest_pcb_purchase_limit.py  cap_constrained_pcb_allocation.py  capture_1430_market_snapshot.py  estimate_fund_intraday_from_holdings.py  factor_gate_rotation.py  hybrid_generalization_validation.py  hybrid_period_comparison.py  hybrid_regime_rotation.py  hybrid_take_profit_overlay.py  ml_relative_satellite_60day.py  optimize_pcb_core_satellite.py  optimize_rotation_with_pcb_limit.py  optimize_sector_rotation_with_c_fee.py  (+15 more)
(+112 files in other folders)
